--- a/podman-compose.yml
+++ b/podman-compose.yml
@@ -2,10 +2,8 @@ version: '1.0'
 
 services:
   elasticsearch:
-    build:
-      context: elasticsearch/
-      args:
-        ELK_VERSION: $ELK_VERSION
+    container_name: elasticsearch
+    image: docker.elastic.co/elasticsearch/elasticsearch:8.17.4
     volumes:
       - type: bind
         source: ./elasticsearch/config/elasticsearch.yml
@@ -22,18 +20,16 @@ services:
       - "9300:9300"
     environment:
       ES_JAVA_OPTS: "-Xmx256m -Xms256m"
-      ELASTIC_PASSWORD: changeme
+      ELASTIC_PASSWORD: Iez@Nsl2_fY0PNePJL2!pOYp6%uP%hY6nu%rbtSyVF@fkOllvtq#FkNx3y!OrdEbKf9ySUHPPm!1
       # Use single node discovery in order to disable production mode and avoid bootstrap checks.
       # see: https://www.elastic.co/guide/en/elasticsearch/reference/current/bootstrap-checks.html
       discovery.type: single-node
     networks:
-      - elknet
+      - elastic
 
   logstash:
-    build:
-      context: logstash/
-      args:
-        ELK_VERSION: $ELK_VERSION
+    container_name: logstash
+    image: docker.elastic.co/logstash/logstash:8.17.4
     volumes:
       - type: bind
         source: ./logstash/config/logstash.yml
@@ -52,30 +48,42 @@ services:
     environment:
       LS_JAVA_OPTS: "-Xmx256m -Xms256m"
     networks:
-      - elknet
+      - elastic
     depends_on:
       - elasticsearch
 
   kibana:
-    build:
-      context: kibana/
-      args:
-        ELK_VERSION: $ELK_VERSION
+    image: docker.elastic.co/kibana/kibana:8.17.4
     volumes:
-      - type: bind
-        source: ./kibana/config/kibana.yml
-        target: /usr/share/kibana/config/kibana.yml
-        read_only: true
+      - ./kibana/config:/usr/share/kibana/config
     ports:
       - "5601:5601"
     networks:
-      - elknet
+      - elastic
     depends_on:
       - elasticsearch
 
-networks:
-  elknet:
-    driver: bridge
-
+  apm-server:
+    container_name: apm-server
+    image: docker.elastic.co/apm/apm-server:8.17.4
+    volumes:
+      - type: bind
+        source: ./apm-server/apm-server.docker.yml
+        target: /usr/share/apm-server/apm-server.yml
+        read_only: true
+    ports:
+      - "8200:8200"
+    environment:
+      elasticsearch.hosts: "host.containers.internal:9200"
+      STRICT_PERMS: false
+    networks:
+      - elastic
+    depends_on:
+      - elasticsearch
+    
 volumes:
   elasticsearch:
+
+networks:
+  elastic:
+    :driver: bridge
